Fixed title spacing

--- a/frontend/src/components/Title/Title.module.css
+++ b/frontend/src/components/Title/Title.module.css
@@ -5,7 +5,6 @@
 }
 
 .title {
-	position: absolute;
 	text-align: center;
 	width: 100%;
 }
